--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@firebase/firestore": "^4.6.1",
     "@react-native-community/datetimepicker": "^7.7.0",
-    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^19.1.0",
-    "@react-native-firebase/firestore": "^19.2.2",
+    "@react-native-firebase/firestore": "^20.1.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "base-64": "^1.0.0",
     "firebase": "^10.11.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-modal-datetime-picker": "^17.1.0"
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-svg": "^15.3.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
